<resources>
    <string name="app_name">common</string>
    <string name="login_help">帮助</string>
    <string name="btn_text_login">登 录</string>
    <string name="register_title">快速注册</string>
    <string name="btn_text_register">注 册</string>
    <string name="top_scan">扫啊扫</string>
    <string name="messenger">消息</string>
    <string name="logout">确定退出登录?</string>
    <string name="no">取消</string>
    <string name="yes">确定</string>
    <string name="not_net">网络连接不可用</string>
</resources>
