<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dp_10">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_20"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="@dimen/sp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/colorBlack"/>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/cancel"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/no"
                android:textColor="@color/color_red"
                android:background="@drawable/button_style2"/>
            <Button
                android:id="@+id/notarize"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:text="@string/yes"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_style"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>